# colordf

./: AUTHORS  CMakeLists.txt  ChangeLog  Makefile  Makefile.am  Makefile.in  NEWS  README  README.md  TODO  cdfrc.sample  colors.c  colors.h  common.c  common.h  conf.c  conf.h  config.h.in  configure  configure.in  cutedf.c  hash.c  hash.h  stat.c  stat.h
src/: Makefile.am  Makefile.in  colordf.c  colordf.h  colors.c  colors.h  common.c  common.h  conf.c  conf.h  cutedf.c  hash.c  hash.h  main.c  stat.c  stat.h
